# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
articles/: models.py  serializer.py  tests.py  urls.py  views.py
articles/migrations/: 0001_initial.py
news_project/: settings.py  urls.py
